# cellml-testbed

./: .gitignore
arrowapply-utils/: LICENSE  arrowapply-utils.cabal
arrowapply-utils/Control/Arrow/: ApplyUtils.hs
cellml12/: cellml12.cabal
cellml12/Data/CellML12/: DisjointSet.hs  IndexedModel.hs  ModelLoader.hs  ModelSolver.hs  Parser.hs  SimplifiedModel.hs  Structure.hs  SupportCode.hs  SystemDecomposer.hs  ToSimplifiedModel.hs
cellml12/ccode/: cellml12-solver-protocol.h
cellml12/tests/: OtherModel.cellml  Simple.cellml
cmathml3/: cmathml3.cabal
cmathml3/Data/: ContentMathML3.hs
cmathml3/Data/ContentMathML3/: NSToS.hs  Parser.hs  Serialiser.hs  Structure.hs  XNodeOrd.hs
cmathml3/tests/: TestMain.hs  test1.xml
cxx-bindings/: CellMLMarshal.hs  build.sh  cellml-testbed-bindings.cpp  cellml-testbed.h  test.cpp
examples/: RunSolver.hs
examples/models/: exp_growth.cellml  exp_growth_uncertain.cellml  modified_parabola12.cellml  modified_parabola12.xml  simple_event.cellml  simple_reset.cellml
examples/models/cooling_hunter_crampin_2009_12/: NFATCycling_DualProtocol.cellml  NFATCycling_ShenProtocol.cellml  NFATCycling_TomidaProtocol.cellml  NFATMyocyte_DualProtocol_Submodel.cellml  NFATMyocyte_ShenProtocol_Submodel.cellml  NFATMyocyte_TomidaProtocol_Submodel.cellml  calcineurin_DualProtocol.cellml  calcineurin_ShenProtocol.cellml  calcineurin_TomidaProtocol.cellml  calcium_DualProtocol.cellml  calcium_ShenProtocol.cellml  calcium_TomidaProtocol.cellml
model-migrator/: Main.hs  XNodeOrd.hs  model-migrator.cabal
