Name: cmathml3
Version: 0.1
Cabal-Version: >= 1.2
Build-Type: Simple
License: BSD3
Author: Andrew Miller
Copyright: (C) 2012 The University of Auckland
Maintainer: ak.miller@auckland.ac.nz
Stability: experimental
Synopsis: Data model, parser, serialiser and basic transformations for working with Content MathML 3
Description: Data model, parser, serialiser and basic transformations for working with Content MathML 3
Category: Math
Category: XML

Test-Suite mathtest
    Type: exitcode-stdio-1.0
    Main-Is: tests/TestMain.hs    
    Build-Depends: base, Cabal >= 1.9.2

Library
    Exposed-Modules: Data.ContentMathML3,
                     Data.ContentMathML3.Structure,
                     Data.ContentMathML3.Parser
    Build-Depends: hxt >= 9 && <10,
                   base >= 3
